add configure for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,11 @@
 # normal tmux key bindings. This is intended as an example not as to be used
 # as-is.
 #
+#
+
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
+
 
 unbind-key y
 bind-key y set-window-option synchronize-panes
@@ -133,10 +138,12 @@ bind l select-pane -R
 # resize panes like vim
 # feel free to change the "1" to however many lines you want to resize by, only
 # one at a time can be slow
-bind < resize-pane -L 1
-bind > resize-pane -R 1
-bind - resize-pane -D 1
-bind + resize-pane -U 1
+#
+bind -r < resize-pane -L 5
+bind -r > resize-pane -R 5
+bind -r - resize-pane -D 5
+bind -r + resize-pane -U 5
+
 
 # bind : to command-prompt like vim
 # this is the default in tmux already
